# EEG_workshop

./: .gitignore  AGENTS.md  GEMINI.md  PYTHON_ENV_RECOMENDATIONS.md  README.md  env_chack_instalation.py  pyproject.toml  requirements.txt  sample.py  setup.ps1  setup.windows.ps1
exercises/BIDS_DASH/: bids_dash_psd_fooof_demo.py
exercises/BIDS_DATA/: read-bids.py
exercises/DOWNSAMPLING/: downsample_eeg_scaffold.py
exercises/EEG_Ml/: filter_design.py  ml-eoec-classification.py
exercises/FILTERS/: filter_design.py
exercises/MONTAGE_REREF/: montage_rereference_scaffold.py
scripts/: wsl_setup.sh
