[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-workshop"
version = "0.1.0"
description = "EEG Workshop environment: Brainstorm (UI), MNE, MNE-BIDS, EEGDash, notebooks"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = { text = "MIT" }

dependencies = [
    # Core scientific stack
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.6",

    # EEG analysis
    "mne>=1.6",
    "mne-bids>=0.15",

    # Artifact handling / visualization helpers
    "autoreject>=0.4",
    "pyvista>=0.43",

    # EEGDash and dependencies
    "dash>=2.14",
    "flask>=2.2",
    "plotly>=5.17",

    # Notebooks
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.25",
    "marimo>=0.6",

    # Utilities
    "tqdm>=4.65",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://example.org/eeg-workshop"
